--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,80 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --border-color: #291D4D;
+  --dialog-background: #FFF3B4;
+
+  --menu-background: #FFE8D2;
+  --menu-border-color: #A48465;
+  --menu-font-color: #3A160D;
+  --menu-selected-background: #7fc2ff;
+}
 
 
 .game-canvas {
   image-rendering: pixelated;
 }
 
+
+.TextMessage {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 36px;
+  padding: 4px;
+  background: var(--menu-background);
+  border-top: 1px solid var(--menu-border-color);
+  color: var(--menu-font-color);
+}
+
+.TextMessage_p {
+  margin: 0;
+  font-size: 12px;
+}
+.TextMessage span {
+  opacity: 0;
+}
+.TextMessage span.revealed {
+  opacity: 1;
+}
+
+.TextMessage_button {
+  margin: 0;
+  font-size: 8px;  
+  padding:0;
+  -webkit-appearance: none;
+  background:none;
+  border:0;
+  font-family: inherit;
+  cursor: pointer;
+
+  position: absolute;
+  right: 2px;
+  bottom: 0;
+}
+
+
+.SceneTransition {
+  position:absolute;
+  left:0;
+  top:0;
+  right:0;
+  bottom:0;
+  background: #fff;
+  opacity: 0;
+  animation: scene-transition-fade-in 1.2s forwards;
+}
+.SceneTransition.fade-out {
+  animation: scene-transition-fade-out 1.2s forwards;
+}
+
+@keyframes scene-transition-fade-in {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+@keyframes scene-transition-fade-out {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
