--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,20 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --border-color: #291D4D;
-  --dialog-background: #FFF3B4;
+  --border-color: #291d4d;
+  --dialog-background: #fff3b4;
 
-  --menu-background: #FFE8D2;
-  --menu-border-color: #A48465;
-  --menu-font-color: #3A160D;
+  --menu-background: #ffe8d2;
+  --menu-border-color: #a48465;
+  --menu-font-color: #3a160d;
   --menu-selected-background: #7fc2ff;
 }
-
 
 .game-canvas {
   image-rendering: pixelated;
 }
 
+/* Text Message*/
 
 .TextMessage {
   position: absolute;
@@ -43,11 +43,11 @@
 
 .TextMessage_button {
   margin: 0;
-  font-size: 8px;  
-  padding:0;
+  font-size: 8px;
+  padding: 0;
   -webkit-appearance: none;
-  background:none;
-  border:0;
+  background: none;
+  border: 0;
   font-family: inherit;
   cursor: pointer;
 
@@ -56,13 +56,14 @@
   bottom: 0;
 }
 
+/* Scene Transition */
 
 .SceneTransition {
-  position:absolute;
-  left:0;
-  top:0;
-  right:0;
-  bottom:0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
   background: #fff;
   opacity: 0;
   animation: scene-transition-fade-in 1.2s forwards;
@@ -72,10 +73,197 @@
 }
 
 @keyframes scene-transition-fade-in {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @keyframes scene-transition-fade-out {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
+
+/* Battle */
+
+.Battle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-image: url(/maps/StreetBattle.png);
+  background-size: cover;
+  image-rendering: pixelated;
+}
+
+.Battle_hero,
+.Battle_enemy {
+  position: absolute;
+  transform: scale(2);
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  background: url(/characters/shadow.png) no-repeat no-repeat;
+}
+.Battle_hero img,
+.Battle_enemy img {
+  pointer-events: none;
+}
+.Battle_hero {
+  bottom: 57px;
+  left: 1px;
+}
+.Battle_hero img {
+  transform: translateY(-64px); /* Nudge hero spritesheet */
+}
+.Battle_enemy {
+  top: 42px;
+  right: -1px;
+}
+
+/* Combatant */
+
+.Combatant {
+  width: 67px;
+  height: 14px;
+  background: url("/ui/combatant-plate.png") no-repeat no-repeat;
+  position: absolute;
+}
+
+.Battle .Combatant {
+  transform: scale(2);
+}
+.Battle .Combatant[data-active="false"] {
+  opacity: 0;
+}
+.Battle .Combatant[data-active="true"] {
+  opacity: 1;
+}
+
+.Combatant[data-team="player"] {
+  left: 46px;
+  top: 70px;
+}
+.Combatant[data-team="enemy"] {
+  top: 28px;
+  right: 77px;
+}
+
+.Combatant_character_crop {
+  position: absolute;
+  bottom: 1px;
+  left: 3px;
+  width: 22px;
+  height: 12px;
+  overflow: hidden;
+}
+.Combatant_character {
+  display: block;
+  position: absolute;
+  left: -11px;
+  bottom: -7px;
+}
+.Battle .Combatant_character_crop {
+  display: none;
+}
+
+.Combatant_name {
+  position: absolute;
+  left: -2px;
+  top: -8px;
+  white-space: nowrap;
+  background: var(--menu-font-color);
+  color: #fff;
+  font-size: 5px; /*This is only so small because the component is scaled 2x in battle which is weird */
+  padding-left: 2px;
+  padding-right: 2px;
+  margin: 0;
+}
+.Combatant_type {
+  position: absolute;
+  left: 3px;
+  top: -2px;
+  width: 16px;
+  height: 16px;
+}
+
+.Combatant_life-container {
+  position: absolute;
+  left: 20px;
+  top: 4px;
+  width: 26px;
+  height: 3px;
+}
+.Combatant_life-container > rect {
+  transition: width 0.2s;
+}
+
+.Combatant_xp-container {
+  position: absolute;
+  left: 20px;
+  top: 8px;
+  width: 26px;
+  height: 2px;
+}
+.Combatant_level {
+  position: absolute;
+  font-size: 12px;
+  right: 2px;
+  top: -1px;
+  width: 17px;
+  height: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f8c594;
+  border: 1px solid #a48465;
+  margin: 0;
+}
+
+.Combatant_status {
+  position: absolute;
+  font-size: 5px;
+  left: 47px;
+  bottom: -3px;
+  padding-left: 2px;
+  padding-right: 2px;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  margin: 0;
+}
+.Combatant_status[data-status="saucy"] {
+  color: red;
+}
+.Combatant_status[data-status="clumsy"] {
+  background: #582a79;
+}
+
+.Pizza {
+  position: absolute;
+  transform: scale(2);
+  background: url(/characters/pizzas/pizza-shadow.png) no-repeat no-repeat;
+}
+.Pizza[data-team="player"] {
+  bottom: 73px;
+  left: 51px;
+}
+.Pizza[data-team="enemy"] {
+  top: 47px;
+  right: 100px;
+}
+.Pizza[data-active="false"] {
+  opacity: 0;
+}
+.Pizza[data-active="true"] {
+  opacity: 1;
+}
+
+/* Submission Menus */
+
+/* Team */
