--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --border-color: #291d4d;
-  --dialog-background: #fff3b4;
+  --border-color: #291D4D;
+  --dialog-background: #FFF3B4;
 
-  --menu-background: #ffe8d2;
-  --menu-border-color: #a48465;
-  --menu-font-color: #3a160d;
+  --menu-background: #FFE8D2;
+  --menu-border-color: #A48465;
+  --menu-font-color: #3A160D;
   --menu-selected-background: #7fc2ff;
 }
+
 
 .game-canvas {
   image-rendering: pixelated;
@@ -93,17 +94,16 @@
 
 .Battle {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
   background-image: url(/maps/StreetBattle.png);
   background-size: cover;
   image-rendering: pixelated;
 }
 
-.Battle_hero,
-.Battle_enemy {
+.Battle_hero, .Battle_enemy {
   position: absolute;
   transform: scale(2);
   width: 32px;
@@ -111,21 +111,90 @@
   overflow: hidden;
   background: url(/characters/shadow.png) no-repeat no-repeat;
 }
-.Battle_hero img,
-.Battle_enemy img {
+
+
+.Battle_hero img, .Battle_enemy img {
   pointer-events: none;
 }
+
+
 .Battle_hero {
   bottom: 57px;
   left: 1px;
 }
-.Battle_hero img {
-  transform: translateY(-64px); /* Nudge hero spritesheet */
-}
 .Battle_enemy {
   top: 42px;
   right: -1px;
+} 
+
+.Battle_hero img {
+  transform: scale(4) translateY(-4px) translateX(12px); 
 }
+
+.Battle_enemy img {
+  transform: scale(4) translateY(12px) translateX(12px); 
+} 
+
+/* Animations */
+@keyframes battle-damage-blink {
+  to {
+    visibility: hidden; 
+  } 
+}
+.battle-damage-blink {
+  animation: battle-damage-blink 0.3s steps(2, start) infinite;
+}
+
+@keyframes battle-spin-right {
+  0% { transform: translate3d(0,0,0) rotate(0deg) scale(2)}
+  25% { transform: translate3d(155px,-30px,0) rotate(45deg) scale(2)}
+  100% { transform: translate3d(0,0,0) scale(2)}
+}
+.battle-spin-right {
+  animation: battle-spin-right 0.8s;
+}
+@keyframes battle-spin-left {
+  0% { transform: translate3d(0,0,0) rotate(0deg) scale(2)}
+  25% { transform: translate3d(-100%, 25%,0) rotate(45deg) scale(2)}
+  100% { transform: translate3d(0,0,0) scale(2)}
+}
+.battle-spin-left {
+  animation: battle-spin-left 0.8s;
+}
+
+.glob-orb {
+  position: absolute;
+  width:32px;
+  height:32px;
+}
+@keyframes battle-glob-right {
+  0% { transform: translate3d(0,0,0) scale(0.5); opacity: 1}
+  50% { transform: translate3d(10px,-80px,0) scale(1); opacity: 1; }
+  80% {  transform: translate3d(149px, -47px, 0) scale(1);opacity:1 }
+  100% {  transform: translate3d(149px, -47px, 0) scale(3);opacity:0 }
+}
+.battle-glob-right {
+  left: 70px;
+  top: 104px;
+  animation: battle-glob-right 1s forwards;
+}
+
+@keyframes battle-glob-left {
+  0% { transform: translate3d(0,0,0) scale(0.5); opacity: 1}
+  50% { transform: translate3d(-10px,-50px,0) scale(1); opacity: 1; }
+  80% {  transform: translate3d(-174px, 47px, 0) scale(1);opacity:1 }
+  100% {  transform: translate3d(-174px, 47px, 0) scale(3);opacity:0 }
+}
+.battle-glob-left {
+  left: 227px;
+  top: 56px;
+  animation: battle-glob-left 1s forwards;
+}
+
+
+
+
+
 
 /* Combatant */
 
@@ -163,6 +232,7 @@
   height: 12px;
   overflow: hidden;
 }
+
 .Combatant_character {
   display: block;
   position: absolute;
@@ -180,11 +250,12 @@
   white-space: nowrap;
   background: var(--menu-font-color);
   color: #fff;
-  font-size: 5px; /*This is only so small because the component is scaled 2x in battle which is weird */
+  font-size: 5px; 
   padding-left: 2px;
   padding-right: 2px;
   margin: 0;
 }
+
 .Combatant_type {
   position: absolute;
   left: 3px;
@@ -247,7 +318,7 @@
 .Pizza {
   position: absolute;
   transform: scale(2);
-  background: url(/characters/pizzas/pizza-shadow.png) no-repeat no-repeat;
+  background: url('/characters/pizzas/pizza-shadow.png') no-repeat no-repeat;
 }
 .Pizza[data-team="player"] {
   bottom: 73px;
@@ -263,6 +334,73 @@
 .Pizza[data-active="true"] {
   opacity: 1;
 }
+
+/* Keyboard Menu */
+
+.KeyboardMenu {
+  border: 1px solid var(--border-color);
+  background: var(--menu-background);
+  position: absolute;
+}
+.KeyboardMenu button {
+ display: flex;
+ align-items: center;
+ width: 100%;
+ text-align:left;
+ -webkit-appearance: none;
+ border:0;
+ background: none;
+ height: 20px;
+ cursor:pointer;
+ font-family:inherit;
+ padding:0;
+ padding-left: 1em;
+ font-size: 10px;
+}
+.KeyboardMenu button:focus {
+ background: var(--menu-selected-background);
+ outline: 0;
+}
+
+.KeyboardMenu .option {
+  position: relative;
+ }
+ .KeyboardMenu .option .right {
+  position: absolute;
+  right:0;
+  top:0;
+  bottom:0;
+  font-size: 10px;
+  display: flex;
+  align-items: center;
+  padding-right: 3px;
+ }
+
+ .DescriptionBox {
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  color: var(--menu-font-color);
+  border-top: 1px solid var(--border-color);
+  background: var(--menu-background);
+  padding: 2px;
+ }
+ .DescriptionBox p {
+  font-size: 10px;
+  margin:0;
+ }
+
+
+
+ /* Battle specific */
+.Battle .KeyboardMenu {
+  right:0;
+  bottom:0;
+  width: 140px;
+}
+
+
 
 /* Submission Menus */
 
