--- a/styles/globals.css
+++ b/styles/globals.css
@@ -215,6 +215,26 @@
   opacity: 1;
 }
 
+/* Combatant */
+
+.Combatant {
+  width: 67px;
+  height: 14px;
+  background: url("/ui/combatant-plate.png") no-repeat no-repeat;
+  position:absolute;
+}
+
+.Battle .Combatant {
+  transform: scale(2);
+  transition: opacity 0.4s;
+}
+.Battle .Combatant[data-active="false"] {
+  opacity: 0;
+}
+.Battle .Combatant[data-active="true"] {
+  opacity: 1;
+}
+
 .Combatant[data-team="player"] {
   left: 46px;
   top: 70px;
@@ -227,35 +247,33 @@
 .Combatant_character_crop {
   position: absolute;
   bottom: 1px;
-  left: 3px;
+  left:3px;
   width: 22px;
   height: 12px;
-  overflow: hidden;
+  overflow:hidden;
 }
-
 .Combatant_character {
-  display: block;
+  display:block;
   position: absolute;
   left: -11px;
   bottom: -7px;
 }
 .Battle .Combatant_character_crop {
-  display: none;
+  display:none;
 }
 
 .Combatant_name {
   position: absolute;
-  left: -2px;
-  top: -8px;
+  left:-2px;
+  top:-8px;
   white-space: nowrap;
   background: var(--menu-font-color);
   color: #fff;
-  font-size: 5px; 
+  font-size: 5px; /*This is only so small because the component is scaled 2x in battle which is weird */
   padding-left: 2px;
   padding-right: 2px;
   margin: 0;
 }
-
 .Combatant_type {
   position: absolute;
   left: 3px;
@@ -266,8 +284,8 @@
 
 .Combatant_life-container {
   position: absolute;
-  left: 20px;
-  top: 4px;
+  left:20px;
+  top:4px;
   width: 26px;
   height: 3px;
 }
@@ -277,8 +295,8 @@
 
 .Combatant_xp-container {
   position: absolute;
-  left: 20px;
-  top: 8px;
+  left:20px;
+  top:8px;
   width: 26px;
   height: 2px;
 }
@@ -289,11 +307,11 @@
   top: -1px;
   width: 17px;
   height: 12px;
-  display: flex;
+  display:flex;
   align-items: center;
   justify-content: center;
-  background: #f8c594;
-  border: 1px solid #a48465;
+  background: #F8C594;
+  border: 1px solid #A48465;
   margin: 0;
 }
 
@@ -304,7 +322,7 @@
   bottom: -3px;
   padding-left: 2px;
   padding-right: 2px;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0,0,0,0.8);
   color: white;
   margin: 0;
 }
@@ -318,7 +336,8 @@
 .Pizza {
   position: absolute;
   transform: scale(2);
-  background: url('/characters/pizzas/pizza-shadow.png') no-repeat no-repeat;
+  transition: opacity 0.4s, transform 0.4s;
+  background: url(/characters/pizzas/pizza-shadow.png) no-repeat no-repeat;
 }
 .Pizza[data-team="player"] {
   bottom: 73px;
@@ -329,10 +348,12 @@
   right: 100px;
 }
 .Pizza[data-active="false"] {
-  opacity: 0;
+  opacity:0;
+  transform: translate3d(0,16px,0) scale(2);
 }
 .Pizza[data-active="true"] {
-  opacity: 1;
+  opacity:1;
+  transform: translate3d(0,0,0) scale(2);
 }
 
 /* Keyboard Menu */
